# MdtTerminal

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt
apps/MdtTerminalGuiApp/src/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  CentralWidget.ui  ConsoleWidget.cpp  ConsoleWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
apps/MdtTerminalGuiApp/tests/src/: ConsoleWidgetTest.cpp
ci_cd/GitLab/: BuildAndTest_Linux.yml  Doc.yml
doc/: CMakeLists.txt  Doxyfile-dev.in  Doxyfile.in
doc/cpp/: SerialPort.dox  mainpage.dox
doc/plantuml/ClassDiagrams/: SerialPortInfoListTableModel.puml  SerialPortSettingsOverview.puml  SettingsEditor.puml
doc/plantuml/Mdt/SerialPort/: AbstractPortInfoListTableModel.puml  AbstractSettingsEditor.puml  PortInfoListTableModel.puml  Settings.puml  SettingsBuilder.puml  SettingsEditor.puml  SettingsRawData.puml  SettingsValidation.puml  TestSettingsEditor.puml
doc/plantuml/Mdt/SerialPort/TestLib/: TestPortInfoListTableModel.puml
doc/plantuml/Qt/Core/: QAbstractItemModel.puml  QAbstractTableModel.puml  QIODevice.puml  QIODeviceBase.puml
doc/plantuml/Qt/SerialPort/: QSerialPort.puml  QSerialPortInfo.puml
libs/: CMakeLists.txt
libs/Catch2/: CMakeLists.txt  Catch2Main.cpp  Catch2QString.cpp  Catch2QString.h
libs/SerialPort/: CMakeLists.txt
libs/SerialPort/src/: CMakeLists.txt
libs/SerialPort/src/Mdt/SerialPort/: AbstractPortInfoListTableModel.cpp  AbstractPortInfoListTableModel.h  BaudRateListTableModel.cpp  BaudRateListTableModel.h  DataBitsListTableModel.cpp  DataBitsListTableModel.h  FlowControlListTableModel.cpp  FlowControlListTableModel.h  FlowControlStringFormat.cpp  FlowControlStringFormat.h  ParityListTableModel.cpp  ParityListTableModel.h  ParityStringFormat.cpp  ParityStringFormat.h  Platform.cpp  Platform.h  PortInfoListTableModel.cpp  PortInfoListTableModel.h  PortInfoStringFormat.cpp  PortInfoStringFormat.h  QRuntimeError.cpp  QRuntimeError.h  SerialPort.cpp  SerialPort.h  Settings.cpp  Settings.h  SettingsBuilder.cpp  SettingsBuilder.h  SettingsRawData.cpp  SettingsRawData.h  SettingsValidation.cpp  SettingsValidation.h  SettingsValidationError.cpp  SettingsValidationError.h  StopBitsListTableModel.cpp  StopBitsListTableModel.h  StopBitsStringFormat.cpp  StopBitsStringFormat.h
libs/SerialPort/tests/: CMakeLists.txt
libs/SerialPort/tests/src/: BaudRateListTableModelTest.cpp  DataBitsListTableModelTest.cpp  FlowControlListTableModelTest.cpp  FlowControlStringFormatTest.cpp  ParityListTableModelTest.cpp  ParityStringFormatTest.cpp  PlatformTest.cpp  PortInfoListTableModelTest.cpp  SerialPortSettingsBuilderErrorTest.cpp  SerialPortSettingsBuilderTest.cpp  SerialPortSettingsRawDataTest.cpp  SerialPortSettingsTest.cpp  SerialPortSettingsValidationTest.cpp  SerialPortTest.cpp  SettingsTest.cpp  StopBitsListTableModelTest.cpp  StopBitsStringFormatTest.cpp
libs/SerialPort/tests_WithBridgePlug/: CMakeLists.txt
libs/SerialPort/tests_With_HW_SerialPort/: CMakeLists.txt
libs/SerialPort/tests_With_HW_SerialPort/src/: PortInfoListTableModelTest.cpp
libs/SerialPort_TestLib/src/: CMakeLists.txt
libs/SerialPort_TestLib/src/Mdt/SerialPort/TestLib/: TestPortInfoListTableModel.cpp  TestPortInfoListTableModel.h
libs/SerialPort_TestLib/tests/: CMakeLists.txt
libs/SerialPort_TestLib/tests/src/: TestPortInfoListTableModelTest.cpp
libs/SerialPort_Widgets/: CMakeLists.txt
libs/SerialPort_Widgets/src/: CMakeLists.txt
libs/SerialPort_Widgets/src/Mdt/SerialPort/: AbstractSettingsEditor.cpp  AbstractSettingsEditor.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SettingsEditor.cpp  SettingsEditor.h
libs/SerialPort_Widgets/tests/: CMakeLists.txt
libs/SerialPort_Widgets/tests/src/: SerialPortSettingsEditorTest.cpp  SettingsDialogTest.cpp  TestSettingsEditor.cpp  TestSettingsEditor.h
libs/SerialPort_Widgets/tests_With_HW_SerialPort/: CMakeLists.txt
libs/SerialPort_Widgets/tests_With_HW_SerialPort/src/: SerialPortSettingsEditor_With_HW_SerialPort_Test.cpp
